Add CsvReader benchmark test.